Fix user width on mobile

--- a/ui/user/style.css
+++ b/ui/user/style.css
@@ -60,6 +60,6 @@
 
 @media for-phone-only {
     .user {
-        width: 110px;
+        width: 28vw;
     }
 }
